# fastfitz

./: README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
fastfitz/: _modidx.py  core.py  skill.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
